feat: lifecycle listeners

--- a/Assets/Scripts/Bullets/ShootEmUp.Bullets.asmdef
+++ b/Assets/Scripts/Bullets/ShootEmUp.Bullets.asmdef
@@ -5,7 +5,8 @@
         "GUID:95e95e4f11bf07c4b86ec1891ccb6b9d",
         "GUID:c387060cfd4be9b42bc65ce157032478",
         "GUID:c1648641271f2fc458c18da996fcda97",
-        "GUID:e216fba3ea230324d8ba0f9c2d8210ce"
+        "GUID:e216fba3ea230324d8ba0f9c2d8210ce",
+        "GUID:65fee02a940123541a50f7a68c7e3694"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
