--- a/Assets/Scripts/Character/ShootEmUp.Character.asmdef
+++ b/Assets/Scripts/Character/ShootEmUp.Character.asmdef
@@ -5,7 +5,8 @@
         "GUID:c387060cfd4be9b42bc65ce157032478",
         "GUID:441f541fc6afac34f92950ea70344d8e",
         "GUID:e216fba3ea230324d8ba0f9c2d8210ce",
-        "GUID:6e924f5048869ab4b8bc320dac30636a"
+        "GUID:6e924f5048869ab4b8bc320dac30636a",
+        "GUID:65fee02a940123541a50f7a68c7e3694"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
