--- a/Assets/Scripts/Enemy/ShootEmUp.Enemy.asmdef
+++ b/Assets/Scripts/Enemy/ShootEmUp.Enemy.asmdef
@@ -5,7 +5,8 @@
         "GUID:95e95e4f11bf07c4b86ec1891ccb6b9d",
         "GUID:e216fba3ea230324d8ba0f9c2d8210ce",
         "GUID:441f541fc6afac34f92950ea70344d8e",
-        "GUID:c387060cfd4be9b42bc65ce157032478"
+        "GUID:c387060cfd4be9b42bc65ce157032478",
+        "GUID:65fee02a940123541a50f7a68c7e3694"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
