--- a/Assets/Scripts/Character/ShootEmUp.Character.asmdef
+++ b/Assets/Scripts/Character/ShootEmUp.Character.asmdef
@@ -6,7 +6,8 @@
         "GUID:441f541fc6afac34f92950ea70344d8e",
         "GUID:e216fba3ea230324d8ba0f9c2d8210ce",
         "GUID:6e924f5048869ab4b8bc320dac30636a",
-        "GUID:65fee02a940123541a50f7a68c7e3694"
+        "GUID:65fee02a940123541a50f7a68c7e3694",
+        "GUID:b0214a6008ed146ff8f122a6a9c2f6cc"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
