--- a/Assets/Scripts/LifecycleEvents/ShootEmUp.LifecycleEvents.asmdef
+++ b/Assets/Scripts/LifecycleEvents/ShootEmUp.LifecycleEvents.asmdef
@@ -1,3 +1,4 @@
 {
-	"name": "ShootEmUp.LifecycleEvents"
+	"name": "ShootEmUp.LifecycleEvents",
+	"references":[ "GUID:b0214a6008ed146ff8f122a6a9c2f6cc" ]
 }
